4 files modified, 1 added

--- a/src/register-formular-component/register-formular-component.component.html
+++ b/src/register-formular-component/register-formular-component.component.html
@@ -1,12 +1,12 @@
 <form>
   <div>
-    <label for="name">Name:</label>
-    <input type="text" id="name" name="name" [(ngModel)]="name" />
+    <label for="surname">Surname:</label>
+    <input type="text" id="surname" name="surname" [(ngModel)]="surname" />
   </div>
 
   <div>
-    <label for="vorname">Vorname:</label>
-    <input type="text" id="vorname" name="vorname" [(ngModel)]="vorname" />
+    <label for="forename">Forename:</label>
+    <input type="text" id="forename" name="forename" [(ngModel)]="forename" />
   </div>
 
   <div>
@@ -15,7 +15,7 @@
   </div>
 
   <div>
-    <label for="password">Passwort:</label>
+    <label for="password">Password:</label>
     <input
       type="password"
       id="password"
@@ -26,4 +26,3 @@
 
   <button type="submit">Absenden</button>
 </form>
-<p>register-formular-component works!</p>
